Home Page Complete

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -6,9 +6,28 @@
     max-width: 600px;
 }
 
+#pfp{
+    width:100%;
+    height: 100%;
+    max-width:125px;
+    max-height: 125px;
+}
+
 #start-button{
     width:35%;
     height:35%;
     min-height: 32px;
     max-width: 210px;
+}
+
+#member-grid{
+    display: grid;
+    gap: 8px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+#mission-values-grid{
+    display: grid;
+    gap: 16px;
+    grid-template-columns: repeat(2, 1fr);
 }
