--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -5,52 +5,35 @@ body{
     font-weight: 400;
 }
 
-#sep{
-    margin-top:30px;
-}
-
 button{
     outline:none;
     border:none;
-    background-color: rgb(141, 202, 254);
+    background-color: rgb(82, 122, 156);
     color: white;
 }
 
 button:hover{
     cursor:pointer;
     color: rgb(82, 122, 156);
+    background-color: rgb(141, 202, 254);
 }
-
-/* div{
-    background-color:lightblue;
-    border: 2px gray solid;
-} */
 
 #webapp-body {
     margin-left:20px;
     margin-right:20px;
 }
 
+.main-body {
+    width:75%;
+    max-width: 800px;
+    height:100%;
+    min-height:100vh;
+    background-color: rgb(54, 54, 82);
+}
+
 .content-box{
     background-color: rgb(44,49,62);
-    width:100%;
-    height:100%;
     border-radius: 16px;
-    box-shadow: 0px 3px 8px -3px black;
+    box-shadow: 0px 4px 8px -3px rgba(0, 0, 0, 0.6);
     font-size: 12px;
-}
-
-.centered-text{
-    text-align: center;
-}
-
-.xlarge-text{
-    font-size: x-large;
-    font-weight: bold;
-}
-
-.centered-content{
-    display:flex;
-    align-items: center;
-    justify-content: center;
 }
