--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -29,6 +29,7 @@ button:hover{
     height:100%;
     min-height:100vh;
     background-color: rgb(54, 54, 82);
+    box-shadow: 0px 4px 20px -3px rgba(0, 0, 0, 1);
 }
 
 .content-box{
