--- a/client/src/css/pagenav.css
+++ b/client/src/css/pagenav.css
@@ -4,7 +4,8 @@
     height: 70px;
     /* padding-bottom: 20px; */
     /* width:97%; */
-    width: 1850px;
+    width: 100%;
+    max-width: 1850px;
     border-bottom: 1px solid rgb(60, 60, 60);
 }
 
