--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -10,6 +10,7 @@ button{
     border:none;
     background-color: rgb(82, 122, 156);
     color: white;
+    box-shadow: 0px 4px 8px -3px rgba(0, 0, 0, 0.4);
 }
 
 button:hover{
